fix posts overflowing/centered subscribe input

--- a/src/assets/styles/scss/abstracts/_mixins.scss
+++ b/src/assets/styles/scss/abstracts/_mixins.scss
@@ -16,7 +16,7 @@
 @mixin thematic-blog-card( $padding) {
   font-family: $open-sans-font;
   padding: $padding;
-  height: 16.2vh;
+  height: 117px;
   max-width: 276px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
