--- a/src/redux/components/SubscribeBox/SubscribeBox.scss
+++ b/src/redux/components/SubscribeBox/SubscribeBox.scss
@@ -2,16 +2,15 @@
   display: flex;
   flex-direction: column;
   padding: 150px 0;
+  text-align: center;
 
   &__content {
     font-weight: 600;
     padding: 30px 0 50px;
-    text-align: center;
   }
 
   &__title {
     padding: 20px 0;
-    text-align: center;
   }
 }
 
@@ -25,8 +24,6 @@
   position: relative;
 
   &__email {
-    position: absolute;
-    left: 70px;
     border: none;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     width: 55%;
@@ -35,7 +32,13 @@
 
   &__button {
     position: absolute;
+    right: 120px;
     padding:  9.5px 20px;
-    right: 200px;
+  }
+}
+
+@media(max-width: 1200px) {
+  .subscribe-input__button{
+    right: 160px;
   }
 }
